# romanian_palatalization

./: .flake8  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  run_pipeline.sh  setup.py  verify_dependencies.py
.github/workflows/: lint.yml
analysis/: analyze_romanian_palatalization.R
docs/: data_dict.md
scripts/: attach_frequencies.py  dex_qc_main_csv.py  download_leipzig.py  romanian_harvester.py  romanian_processor_main.py
src/: dex_utils.py  romanian_processor_lib.py  wiktionary_normalizer.py
