[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "romanian-palatalization"
version = "1.0.0"
description = "Corpus-based analysis of palatalization patterns in Romanian morphophonology"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "John Winstead", email = "j.hn.w.nst.d@gmail.com"}
]
keywords = [
    "romanian",
    "palatalization",
    "phonology",
    "morphophonology",
    "linguistics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=1.5.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "tenacity>=8.0.0",
    "urllib3>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "flake8-pyproject>=1.2.0",
    "flake8-bugbear>=23.0.0",
    "flake8-comprehensions>=3.14.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "pytest>=7.0.0",
    "types-requests>=2.31.0.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/jhnwnstd/romanian_palatalization/issues"
"Source" = "https://github.com/jhnwnstd/romanian_palatalization"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 79
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 79

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]
select = ["E", "F", "W", "B", "C4"]
